# SimpleP2P

./: client_tcp.py  client_udp.py  pyproject.toml  server_tcp.py  server_udp.py
